--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -2467,7 +2467,7 @@ $\bL_1$&
 &
 $\setlength{\arraycolsep}{1pt}
 \begin{array}{c|cccc}
-    x& 0& 1& 2& 3\\\hline
+    \bB_1& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\\
    g(x)& 1& 0& 1& 0\end{array}$
 \end{tabular}
@@ -2495,7 +2495,7 @@ $\bL_2$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
-    x& 0& 1& 2& 3\\\hline
+    \bB_2& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\\
    g(x)& 2& 3& 0& 1\end{array}$
 \end{tabular}
@@ -2523,7 +2523,7 @@ $\bL_3$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccc}
-           x& 0& 1& 2& 3& 4& 5& 6\\\hline
+           \bB_3& 0& 1& 2& 3& 4& 5& 6\\\hline
    f(x)& 0& 1& 2& 1& 2& 1& 0\\
    g(x)& 0& 3& 4& 3& 4& 3& 0\\
    h(x)& 6& 5& 2& 5& 2& 5& 6\\
@@ -2553,7 +2553,7 @@ $\bL_4$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccc}
-           x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11\\\hline
+           \bB_4& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11\\\hline
     f(x)& 1&  2&   3& 4& 5& 0& 7& 8& 9& 10& 11& 6\\
    g(x)& 6& 11& 10& 9& 8& 7& 0& 5& 4& 3&   2&  1\\
    h(x)& 0& 0& 0& 6& 0& 0& 0& 0& 6& 0& 0& 0\end{array}$
@@ -2582,7 +2582,7 @@ $\bL_5$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
-    x& 0& 1& 2& 3\\\hline
+    \bB_5& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\\
    g(x)& 0& 0& 2& 2\end{array}$
 \end{tabular}
@@ -2609,7 +2609,7 @@ $\bL_6$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
-    x& 0& 1& 2& 3& 4& 5\\\hline
+    \bB_6& 0& 1& 2& 3& 4& 5\\\hline
    f(x)& 2& 2& 1& 5& 5& 4\\
    g(x)& 3& 4& 4& 0& 1& 1\\
    h(x)& 4& 5& 3& 4& 5& 3\end{array}$
@@ -2637,7 +2637,7 @@ $\bL_7$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
-    x& 0& 1& 2& 3& 4& 5\\\hline
+    \bB_7& 0& 1& 2& 3& 4& 5\\\hline
    f(x)& 1& 0& 0& 4& 3& 3\\
    g(x)& 4& 5& 5& 1& 2& 2\\
    h(x)& 3& 3& 4& 3& 3& 4\end{array}$
@@ -2645,14 +2645,14 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
 
 \begin{tabular}{ccc}
 $\bL_8$&
-\begin{minipage}{0.12\textwidth}
+\begin{minipage}{0.1\textwidth}
 \begin{tikzpicture}
     [scale=0.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(5) at (0,1)[e]{};
-\node(4) at (-1,0.0)[e]{};
-\node(3) at (-.33,0)[e]{};
-\node(2) at (0.33,0)[e]{};
-\node(1) at (1,0)[e]{};
+\node(4) at (-.75,0.0)[e]{};
+\node(3) at (-.25,0)[e]{};
+\node(2) at (0.25,0)[e]{};
+\node(1) at (.75,0)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(4)--(5);
@@ -2667,7 +2667,7 @@ $\bL_8$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
-    x& 0& 1& 2& 3& 4& 5\\\hline
+    \bB_8& 0& 1& 2& 3& 4& 5\\\hline
    f(x)& 1& 2& 0& 4& 5& 3\\
    g(x)& 3& 5& 4& 0& 2& 1\end{array}$
 \end{tabular}
@@ -2698,7 +2698,7 @@ $\bL_9$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
-        x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
+        \bB_9& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
     f(x)& 0& 0& 0& 0& 0& 0& 2& 1&  2&  1&   3&   4&   5&   3&   4&  5\\
    g(x)& 0& 0& 0& 0& 0& 0& 6&  7&  6&  7& 10& 11& 12& 10& 11& 12 \\
    h(x)&13&14&15&1&9&8&15&14&13& 15& 1&  9&    8&   8& 1&   9\end{array}$
@@ -2730,9 +2730,8 @@ $\bL_{10}$&
 \end{minipage}
 &
 \begin{tabular}{l}
-No finite algebra\\
-known with this\\
-congruence lattice\end{tabular}
+\textbf{No finite algebra known with this congruence lattice}
+\end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -2789,7 +2788,7 @@ $\bL_{12}$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccccc}
-   x& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
+   \bB_{12}& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
 f(x)& 0& 0& 3& 3& 3& 6& 6& 6& 0\\
 g(x)& 0& 0& 8& 8& 8& 1& 1& 1& 0\\
 h(x)& 0& 5& 5& 4& 0& 0& 5& 4& 4\\
@@ -2823,7 +2822,7 @@ $\bL_{13}$&
 &
 $\setlength{\arraycolsep}{1pt}
 \begin{array}{c|ccccccccccccccccccc}
-    x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9&10&11&12&13&14&15&16&17&18\\\hline
+    \bB_{13}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9&10&11&12&13&14&15&16&17&18\\\hline
 f(x)& 0& 1& 2& 1& 2& 1& 0& 0& 1& 2&   2& 1&  0&  0&  1&  2&  1&  2& 0\\
 g(x)& 0& 1& 2& 0& 0& 2& 2& 0& 3& 4&  0&  4& 4&   6&  5&  2&  6&  6& 2\\
 h(x)& 0& 1& 2& 3& 4& 5& 6& 0& 1& 2&  4&  5& 6&   0& 1&   2&  3&  4& 6\\
@@ -2888,7 +2887,7 @@ $\bL_{15}$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
-    x& 0& 1& 2& 3\\\hline
+    \bB_{15}& 0& 1& 2& 3\\\hline
    f(x)& 1& 0& 3& 2\end{array}$
 \end{tabular}
 
@@ -2948,7 +2947,7 @@ $\bL_{17}$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccc}
-       x& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11\\\hline
+       \bB_{17}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11\\\hline
     f(x)& 1& 0& 3& 2& 5& 4& 7& 6& 9& 8& 11& 10\\
    g(x)& 4& 7& 5& 6& 8&11& 9&10& 0& 3&  1&  2\\
    h(x)& 0& 0& 0& 0& 5& 5& 5& 5&10&10&10&10\end{array}$
@@ -2967,7 +2966,7 @@ $\bL_{18}$&
 \node(4) at (-0.5,0.33)[e]{};
 \node(3) at (0,0.33)[e]{};
 \node(2) at (0.5,-0.33)[e]{};
-\node(1) at (-0.25,-0.33)[e]{};
+\node(1) at (-0.5,-0.33)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
@@ -2992,7 +2991,7 @@ $\bL_{19}$&
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (-0.25,0.33)[e]{};
+\node(5) at (-0.5,0.33)[e]{};
 \node(4) at (0.5,0.33)[e]{};
 \node(3) at (-0.5,-0.33)[e]{};
 \node(2) at (0,-0.33)[e]{};
@@ -3011,7 +3010,7 @@ $\bL_{19}$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccc}
-   x& 0& 1& 2& 3& 4& 5& 6& 7\\\hline
+   \bB_{19}& 0& 1& 2& 3& 4& 5& 6& 7\\\hline
 f(x)& 0& 1& 1& 0& 4& 5& 5& 4\\
 g(x)& 0& 2& 3& 1& 0& 2& 3& 1\\
 h(x)& 7& 6& 6& 7& 3& 2& 2& 3\end{array}$
@@ -3042,7 +3041,9 @@ $\bL_{20}$&
 \end{minipage}
 &
 \begin{tabular}{l}
-SmallGroup(216,153) in GAP\end{tabular}
+SmallGroup(216,153) in GAP\\
+$|\bB_{20}|=216$
+\end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3070,7 +3071,7 @@ $\bL_{21}$&
 \end{minipage}
 &
 $\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccccccc}
-   x& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
+   \bB_{21}& 0& 1& 2& 3& 4& 5& 6& 7& 8\\\hline
 f(x)& 3& 3& 4& 8& 8& 2& 2& 3& 4\\
 g(x)& 0& 0& 6& 1& 1& 0& 0& 5& 6\\
 h(x)& 4& 5& 5& 7& 8& 8& 7& 4& 4\end{array}$
@@ -3082,11 +3083,11 @@ $\bL_{22}$&
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (-0.33,0.5)[e]{};
+\node(5) at (0.5,0.5)[e]{};
 \node(4) at (0,0.5)[e]{};
-\node(3) at (0.33,0)[e]{};
-\node(2) at (-0.33,0)[e]{};
-\node(1) at (-0.33,-0.5)[e]{};
+\node(3) at (-0.66,0)[e]{};
+\node(2) at (0.5,0)[e]{};
+\node(1) at (0.5,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
@@ -3101,10 +3102,8 @@ $\bL_{22}$&
 \end{minipage}
 &
 \begin{tabular}{l}
-Dual of 23, no\\
-explicit small\\
-representation\\
-known\end{tabular}
+Dual of 23, no explicit small\\
+representation known\end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3113,10 +3112,10 @@ $\bL_{23}$&
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (-0.33,0.5)[e]{};
-\node(4) at (-0.33,0)[e]{};
-\node(3) at (0.33,0)[e]{};
-\node(2) at (-0.33,-0.5)[e]{};
+\node(5) at (0.5,0.5)[e]{};
+\node(4) at (0.5,0)[e]{};
+\node(3) at (-0.66,0)[e]{};
+\node(2) at (0.5,-0.5)[e]{};
 \node(1) at (0,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
@@ -3131,12 +3130,12 @@ $\bL_{23}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,0,1,4,4)\\
-(1,1,3,3,4,5)\\
-(3,2,3,2,5,5)\\
-(4,1,5,3,4,5)
-\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
+      \bB_{23}& 0& 1& 2& 3& 4& 5\\\hline
+   f(x)& 0& 1& 0& 1& 4& 4\\
+   g(x)& 1& 1& 3& 3& 4& 5\\
+   h(x)& 3& 2& 3& 2& 5& 5\\
+   k(x)& 4& 1& 5& 3& 4& 5\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3164,9 +3163,10 @@ $\bL_{24}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(1,1,2,2)\\
-(2,3,3,2)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
+      \bB_{24}& 0& 1& 2& 3\\\hline
+   f(x)& 1& 1& 2& 2\\
+   g(x)& 2& 3& 3& 2\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3194,11 +3194,12 @@ $\bL_{25}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,0,2,2,2)\\
-(0,1,0,1,1)\\
-(1,1,4,4,4)\\
-(2,3,2,3,3)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccc}
+      \bB_{25}& 0& 1& 2& 3& 4\\\hline
+   f(x)&0& 0& 2& 2& 2\\
+   g(x)&0& 1& 0& 1& 1\\
+   h(x)&1& 1& 4& 4& 4\\
+   k(x)&2& 3& 2& 3& 3\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3206,13 +3207,13 @@ $\bL_{26}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (-0.25,0.94)[e]{};
-\node(5) at (0.14,0.47)[e]{};
-\node(4) at (-0.4,0.0)[e]{};
-\node(3) at (0.11,0.0)[e]{};
-\node(2) at (0.51,0.0)[e]{};
-\node(1) at (0.14,-0.47)[e]{};
-\node(0) at (-0.25,-0.94)[e]{};
+\node(6) at (0,1)[e]{};
+\node(5) at (0.25,0.5)[e]{};
+\node(4) at (-0.66,0)[e]{};
+\node(3) at (0,0)[e]{};
+\node(2) at (0.5,0)[e]{};
+\node(1) at (0.25,-0.5)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3225,11 +3226,12 @@ $\bL_{26}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(1,0,3,2,0,2)\\
-(4,4,5,5,1,3)\\
-(0,0,0,0,1,1)\\
-(3,5,3,5,3,3)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccc}
+      \bB_{26}& 0& 1& 2& 3& 4& 5\\\hline
+   f(x)&1& 0& 3& 2& 0& 2\\
+   g(x)&4& 4& 5& 5& 1& 3\\
+   h(x)&0& 0& 0& 0& 1& 1\\
+   k(x)&3& 5& 3& 5& 3& 3\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3238,11 +3240,11 @@ $\bL_{27}$&
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (0.33,0.5)[e]{};
-\node(4) at (-0.33,0.25)[e]{};
-\node(3) at (0.33,0.0)[e]{};
-\node(2) at (-0.33,-0.25)[e]{};
-\node(1) at (0.33,-0.5)[e]{};
+\node(5) at (0.5,0.5)[e]{};
+\node(4) at (-0.5,0.33)[e]{};
+\node(3) at (0.5,0.0)[e]{};
+\node(2) at (-0.5,-0.33)[e]{};
+\node(1) at (0.5,-0.5)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
@@ -3255,15 +3257,15 @@ $\bL_{27}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
-(4,5,3,4,5,3,5,3,4,5,3,4,5,4,5,3)\\
-(2,2,1,5,5,4,2,1,5,5,4,2,2,5,5,4)\\
-(3,4,4,0,1,1,4,4,0,1,1,3,4,0,1,1)\\
-(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
-(11,12,2,13,14,15,12,2,13,14,15,\\
-11,12,13,14,15)
-\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
+        \bB_{27}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
+   f(x)&0& 1& 2& 3& 4& 5& 0& 0& 0& 0& 0& 2& 2& 2& 2& 2\\
+   g(x)&4& 5& 3& 4& 5& 3& 5& 3& 4& 5& 3& 4& 5& 4& 5& 3\\
+   h(x)&2& 2& 1& 5& 5& 4& 2& 1& 5& 5& 4& 2& 2& 5& 5& 4\\
+   k(x)&3& 4& 4& 0& 1& 1& 4& 4& 0& 1& 1& 3& 4& 0& 1& 1\\
+   l(x)&0& 6& 7& 8& 9& 10& 6& 7& 8& 9& 10& 0& 6& 8& 9& 10\\
+   m(x)&11& 12& 2& 13& 14& 15& 12& 2& 13& 14& 15& 11& 12& 13& 14& 15
+\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3272,11 +3274,11 @@ $\bL_{28}$&
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
 \node(6) at (0,1)[e]{};
-\node(5) at (0.33,0.6)[e]{};
-\node(4) at (-0.33,0)[e]{};
-\node(3) at (0.33,0.2)[e]{};
-\node(2) at (0.33,-0.2)[e]{};
-\node(1) at (0.33,-0.6)[e]{};
+\node(5) at (0.5,0.6)[e]{};
+\node(4) at (-0.5,0)[e]{};
+\node(3) at (0.5,0.2)[e]{};
+\node(2) at (0.5,-0.2)[e]{};
+\node(1) at (0.5,-0.6)[e]{};
 \node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
@@ -3289,15 +3291,15 @@ $\bL_{28}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,2,3,4,5,0,0,0,0,0,2,2,2,2,2)\\
-(3,3,4,3,3,4,3,4,3,3,4,3,3,3,3,4)\\
-(1,0,0,4,3,3,0,0,4,3,3,1,0,4,3,3)\\
-(4,5,5,1,2,2,5,5,1,2,2,4,5,1,2,2)\\
-(0,6,7,8,9,10,6,7,8,9,10,0,6,8,9,10)\\
-(11,12,2,13,14,15,12,2,13,14,15,\\
-11,12,13,14,15)
-\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
+        \bB_{28}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
+   f(x)&0& 1& 2& 3& 4& 5& 0& 0& 0& 0& 0& 2& 2& 2& 2& 2\\
+   g(x)&3& 3& 4& 3& 3& 4& 3& 4& 3& 3& 4& 3& 3& 3& 3& 4\\
+   h(x)&1& 0& 0& 4& 3& 3& 0& 0& 4& 3& 3& 1& 0& 4& 3& 3\\
+   k(x)&4& 5& 5& 1& 2& 2& 5& 5& 1& 2& 2& 4& 5& 1& 2& 2\\
+   l(x)&0& 6& 7& 8& 9& 10& 6& 7& 8& 9& 10& 0& 6& 8& 9& 10\\
+   m(x)&11& 12& 2& 13& 14& 15& 12& 2& 13& 14& 15& 11& 12& 13& 14& 15
+\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3305,13 +3307,13 @@ $\bL_{29}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (-0.19,0.98)[e]{};
-\node(5) at (0.38,0.49)[e]{};
-\node(4) at (-0.25,0.25)[e]{};
-\node(3) at (0.63,0.0)[e]{};
-\node(2) at (-0.52,-0.25)[e]{};
-\node(1) at (0.15,-0.49)[e]{};
-\node(0) at (-0.19,-0.98)[e]{};
+\node(6) at (0.,1)[e]{};
+\node(5) at (0.5,0.5)[e]{};
+\node(4) at (-0.66,0.25)[e]{};
+\node(3) at (0.5,0)[e]{};
+\node(2) at (-0.66,-0.25)[e]{};
+\node(1) at (0,-0.5)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3324,9 +3326,10 @@ $\bL_{29}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(1,0,3,2,2)\\
-(2,4,2,4,3)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccc}
+      \bB_{29}& 0& 1& 2& 3& 4\\\hline
+   f(x)&1& 0& 3& 2& 2\\
+   g(x)&2& 4& 2& 4& 3\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3334,13 +3337,13 @@ $\bL_{30}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (-0.19,0.98)[e]{};
-\node(5) at (0.15,0.49)[e]{};
-\node(4) at (-0.52,0.25)[e]{};
-\node(3) at (0.63,0.0)[e]{};
-\node(2) at (-0.25,-0.25)[e]{};
-\node(1) at (0.38,-0.49)[e]{};
-\node(0) at (-0.19,-0.98)[e]{};
+\node(6) at (0,1)[e]{};
+\node(5) at (0,0.5)[e]{};
+\node(4) at (-0.66,0.25)[e]{};
+\node(3) at (0.5,0)[e]{};
+\node(2) at (-0.66,-0.25)[e]{};
+\node(1) at (0.5,-0.5)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3353,9 +3356,10 @@ $\bL_{30}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,3,4,3,4)\\
-(2,2,1,4,3)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccc}
+      \bB_{30}& 0& 1& 2& 3& 4\\\hline
+   f(x)&0& 3& 4& 3& 4\\
+   g(x)&2& 2& 1& 4& 3\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3363,13 +3367,13 @@ $\bL_{31}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (0.09,0.99)[e]{};
-\node(5) at (-0.3,0.51)[e]{};
-\node(4) at (0.43,0.27)[e]{};
-\node(3) at (-0.21,0.03)[e]{};
-\node(2) at (-0.37,-0.45)[e]{};
-\node(1) at (0.27,-0.45)[e]{};
-\node(0) at (0.09,-0.93)[e]{};
+\node(6) at (0,1)[e]{};
+\node(5) at (0.5,0.5)[e]{};
+\node(4) at (-0.66,0.25)[e]{};
+\node(3) at (0.5,0)[e]{};
+\node(2) at (0.5,-0.5)[e]{};
+\node(1) at (0,-0.5)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3382,10 +3386,11 @@ $\bL_{31}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,1,0,0)\\
-(1,1,2,2,2)\\
-(3,2,2,4,4)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccc}
+   \bB_{31}& 0& 1& 2& 3& 4\\\hline
+   f(x)&0& 1& 1& 0& 0\\
+   g(x)&1& 1& 2& 2& 2\\
+   h(x)&3& 2& 2& 4& 4\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3393,13 +3398,13 @@ $\bL_{32}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (0.09,0.93)[e]{};
-\node(5) at (0.28,0.45)[e]{};
-\node(4) at (-0.37,0.45)[e]{};
-\node(3) at (-0.2,-0.03)[e]{};
-\node(2) at (0.44,-0.27)[e]{};
-\node(1) at (-0.32,-0.52)[e]{};
-\node(0) at (0.09,-1.0)[e]{};
+\node(6) at (0,1)[e]{};
+\node(5) at (0,0.5)[e]{};
+\node(4) at (0.5,0.5)[e]{};
+\node(3) at (0.5,0)[e]{};
+\node(2) at (-0.66,-0.25)[e]{};
+\node(1) at (0.5,-0.5)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3412,11 +3417,11 @@ $\bL_{32}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,1,3,3)\\
-(1,2,2,4,4)\\
-(3,3,4,3,4)
-\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|ccccc}
+      \bB_{32}& 0& 1& 2& 3& 4\\\hline
+   f(x)&0& 1& 1& 3& 3\\
+   g(x)&1& 2& 2& 4& 4\\
+   h(x)&3& 3& 4& 3& 4\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3445,10 +3450,11 @@ $\bL_{33}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(1,3,2,0,9,11,10,8,13,15,14,12,5,7,6,4)\\
-(11,8,10,9,7,4,6,5,15,12,14,13,3,0,2,1)\\
-(14,15,12,13,10,11,8,9,6,7,4,5,2,3,0,1)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
+        \bB_{33}& 0& 1& 2& 3& 4& 5& 6& 7& 8& 9 & 10& 11& 12& 13& 14& 15\\\hline
+   f(x)&1& 3& 2& 0& 9& 11& 10& 8& 13& 15& 14& 12& 5& 7& 6& 4\\
+   g(x)&11& 8& 10& 9& 7& 4& 6& 5& 15& 12& 14& 13& 3& 0& 2& 1\\
+   h(x)&14& 15& 12& 13& 10& 11& 8& 9& 6& 7& 4& 5& 2& 3& 0& 1\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3456,13 +3462,13 @@ $\bL_{34}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (0.0,0.91)[e]{};
-\node(5) at (0.24,0.27)[e]{};
-\node(4) at (-0.42,0.27)[e]{};
-\node(3) at (-0.08,0.27)[e]{};
-\node(2) at (0.39,-0.36)[e]{};
-\node(1) at (-0.13,-0.36)[e]{};
-\node(0) at (0.0,-1.0)[e]{};
+\node(6) at (0,1)[e]{};
+\node(5) at (-0.33,0.33)[e]{};
+\node(4) at (0.33,0.33)[e]{};
+\node(3) at (0,0.33)[e]{};
+\node(2) at (-0.66,-0.33)[e]{};
+\node(1) at (0,-0.33)[e]{};
+\node(0) at (-0.33,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3476,8 +3482,9 @@ $\bL_{34}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(0,1,3,2)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
+      \bB_{34}& 0& 1& 2& 3\\\hline
+   f(x)&0& 1& 3& 2\end{array}$
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3485,13 +3492,13 @@ $\bL_{35}$&
 \begin{minipage}{0.07\textwidth}
 \begin{tikzpicture}
     [scale=.6, e/.style={circle,draw,inner sep=0pt,minimum size=4pt}]
-\node(6) at (0,1)[e]{};
-\node(5) at (-0.14,0.36)[e]{};
-\node(4) at (0.4,0.36)[e]{};
-\node(3) at (-0.41,-0.27)[e]{};
-\node(2) at (-0.1,-0.27)[e]{};
-\node(1) at (0.24,-0.27)[e]{};
-\node(0) at (0.01,-0.91)[e]{};
+\node(6) at (-0.33,1)[e]{};
+\node(5) at (0,0.33)[e]{};
+\node(4) at (-0.66,0.33)[e]{};
+\node(3) at (0.33,-0.33)[e]{};
+\node(2) at (0,-0.33)[e]{};
+\node(1) at (-0.33,-0.33)[e]{};
+\node(0) at (0,-1)[e]{};
 \node at (0,1.3){};
 \draw(5)--(6);
 \draw(4)--(6);
@@ -3505,9 +3512,10 @@ $\bL_{35}$&
 \end{tikzpicture}
 \end{minipage}
 &
-\begin{tabular}{l}
-(1,1,2,3)\\
-(2,3,3,3)\end{tabular}
+$\setlength{\arraycolsep}{1pt}\begin{array}{c|cccc}
+      \bB_{35}& 0& 1& 2& 3\\\hline
+   f(x)&1& 1& 2& 3\\
+   g(x)&2& 3& 3& 3\end{array}$
 \end{tabular}
 
 %% -- End conglattices7.tex file insertion -------------------------------
