--- a/article/SmallLatticeReps.tex
+++ b/article/SmallLatticeReps.tex
@@ -589,7 +589,7 @@ that is, the group action of $G$ on the left cosets of~$H$;
 see~\cite{alvi:1987}.
 However the \Palfy-\Pudlak theorem does not prove that if 
 a particular lattice $L$
-is a congruence lattice of a finite lattice that it 
+is a congruence lattice of a finite algebra that it 
 is (isomorphic to) an interval of a subgroup lattice of a finite
 group (although the opposite implication is obviously true) so
 it is possible that there is a congruence lattice $L$ of a finite
@@ -1038,8 +1038,9 @@ A more direct proof of Theorem~\ref{thm:ordinal-sums} follows the argument given
 by John Snow in~\cite{Snow:2000}.  As noted above, 
 \Jiri \Tuma proved that
 the class of finite representable lattices is closed under direct products.
-Thus, if $L_1$ and 
-$L_2$ are representable, then so is $L_1 \times L_2$.  Now note that the
+In fact, if $L_1$ and 
+$L_2$ are representable as congruence lattices of algebras of cardinality $m$ and $n$ respectively, then $L_1 \times L_2$ is the congruence lattice of an algebra of
+cardinality $mn$. Now note that the
 adjoined ordinal sum of $L_1$ and $L_2$ is the union, $\alpha^\uparrow \cup
 \beta^\downarrow$,  of a filter and ideal  
 in the lattice $L_1 \times L_2$, where
@@ -1047,7 +1048,7 @@ $\alpha = \beta = 1_{L_1} \times 0_{L_2}$.
 Therefore, by Lemma~\ref{lemma:union-filter-ideal},
 the adjoined ordinal sum is representable.  A trivial induction argument proves the
 result for adjoined ordinal sums of $n$ lattices.  The same result for ordinal
-sums (Figure~\ref{fig:ord_adjord} left) follows since the two element lattice is
+sums (Figure~\ref{fig:ord_adjord} left) follows since the two-element lattice is
 obviously representable. 
 
 \begin{center}
@@ -1078,22 +1079,16 @@ obviously representable.
 %\todo{Merge this subsection with the subsection ``Ordinal Sums I.''}
 %\newcommand{\m}{\mathbf}
 
-Let $\bA,\bB$ be two finite algebras of cardinality $m$ and $n$ respectively,
-and let $L=\bCon(\bA)$ and $M=\bCon(\bB)$. 
-In \cite{Snow:2000} it is proved that $L\oplus_a M$ is isomorphic to the
-congruence lattice of some finite algebra $\mathbf C$. Although the algebra $\mathbf C$ is
-not explicitly constructed, it is based on the direct product of $\bA$ and $\bB$,
-hence the ordinal sum is a sublattice of $\bEq(mn)$. Here we give a different
-construction of $\mathbf C$ that leads to a tighter representation of $\bCon(\mathbf C)$ as
-a sublattice of $\bEq(m+n-1)$.  
-%If $\bA$ and $\bB$ are minimal-size algebras that have congruence lattices
-%isomorphic to $\bL$ and $\bM$ respectively, then $\mathbf C$ will also be a
-%minimal-size algebra with congruence lattice isomorphic to $\bL\oplus_a\bM$. 
-
+Rather than using an algebra of cardinality $mn$,
+we now show that $L_1\oplus_aL_2$ is representable as the congruence 
+lattice of an algebra of cardinality $m+n-1$.
+Let $\bA,\bB$ be two finite algebras with universes $A=\{a_0,\dots,a_{m-1}\}$ and 
+$B=\{b_0,\dots,b_{n-1}\}$ respectively,
+such that $L_1=\bCon(\bA)$ and $L_2=\bCon(\bB)$. 
 Define a unary algebra $\bA_{m,n}$ with $m+n-1$ elements as follows: 
-the base set is $A\uplus B_1$ where $A=\{a_0,\dots,a_{m-1}\}$,
-$B_1=\{b_1,\dots,b_{n-1}\}$ and for each function $h:B_1\to A$ define a unary
-operation 
+the universe $A_{m,n}=A\uplus B_1$ where
+$B_1=\{b_1,\dots,b_{n-1}\}\subset B$, and for each function $h:B_1\to A$ 
+define a unary operation on $A_{m,n}$ by
 $$\hat h(x)=\begin{cases}h(x)&\text{if $x\in B_1$}\\ 
 x&\text{otherwise.}\end{cases}$$
 
@@ -1154,7 +1149,7 @@ x&\text{otherwise.}\end{cases}$$
   $\{\theta\in \Eq(A\cup B):\theta\le\alpha$ or $\alpha\le\theta\}$ where,
   as before, $\alpha=A^2\cup\text{id}_B$. Note that $\alpha\in\Con(\mathbf C)$,
   so it suffices to show that $\{\theta\in\Con(\mathbf C):\theta\le\alpha\}$ is
-  isomorphic to $\bCon(\bA)$ and $\{\theta\in\Con(\mathbf C):\theta\le\alpha\}$ 
+  isomorphic to $\bCon(\bA)$ and $\{\theta\in\Con(\mathbf C):\alpha\le\theta\}$ 
   is isomorphic to $\bCon(\bB)$. The second isomorphism follows from the
   observation that $\mathbf C/\alpha$ is isomorphic to $\bB$ via the map 
   $A\mapsto b_0$ and $\{b_i\}\mapsto b_i$ for $i\ge 1$. For the first isomorphism,
@@ -1164,16 +1159,19 @@ x&\text{otherwise.}\end{cases}$$
   Hence the map $\theta\mapsto\theta\cap A^2$ is the required isomorphism.
 \end{proof}
 
-Now assume $\bA$ and $\bB$ are minimal-size algebras with congruence lattices
-isomorphic to $L$ and $M$ respectively. Then it seems likely that the
-algebra $\mathbf C$ above is minimal in size with respect to having a congruence
-lattice isomorphic to $L\oplus_a M$. Suppose $\mathbf C'$ is a smaller algebra
-with the same congruence lattice, and let $\alpha$ be the congruence in the
-``middle'' of the ordinal sum. Then $\mathbf C'/\alpha$ has a congruence lattice
-isomorphic to $M$, hence $|\mathbf C'/\alpha|=|\bB|=$ number of blocks in
-$\alpha$. However, $\alpha$ does not need to have a unique nontrivial block, so
-it is not clear at this point how to obtain a smaller algebra $\bA'$ such that
-$\bCon(\bA')$ is isomorphic to $L$. 
+%The remarks below are not conclusive
+%Now assume $\bA$ and $\bB$ are algebras of minimal cardinality 
+%with congruence lattices
+%isomorphic to $L_1$ and $L_2$ respectively. Then it seems likely that the algebra 
+%$\mathbf C$ above has minimal cardinality with respect to having a congruence
+%lattice isomorphic to $L_1\oplus_a L_2$. 
+%Suppose $\mathbf C'$ is a smaller algebra
+%with the same congruence lattice, and let $\alpha$ be the congruence in the
+%``middle'' of the ordinal sum. Then $\mathbf C'/\alpha$ has a congruence lattice
+%isomorphic to $L_2$, hence $|\mathbf C'/\alpha|=|\bB|=$ number of blocks in
+%$\alpha$. However, $\alpha$ does not need to have a unique nontrivial block, so
+%it is not clear at this point how to obtain a smaller algebra $\bA'$ such that
+%$\bCon(\bA')$ is isomorphic to $L_1$. 
 
 %% -- End intro.tex file insertion -------------------------------
 
@@ -1184,11 +1182,16 @@ $\bCon(\bA')$ is isomorphic to $L$.
 %%%% \input{inputs/concrete.tex} (include all major inputs in one file)
 %% -- Begin concrete.tex file insertion -------------------------------
 
-In this section, we introduce a strategy that has proven very useful for showing
-that a given lattice is representable as a congruence lattice of a finite
-algebra. We call it the \defn{closure method}, and it has become especially
-useful with the advent of powerful computers which can search for such
-representations.  Recall that  $\EqX$ denotes the lattice of equivalence
+In this section, we introduce a strategy, called the \defn{closure method}, 
+that has proven useful for showing
+that a given (small) lattice is representable as a congruence lattice of a finite
+algebra. 
+
+%We call it the \defn{closure method}, and it is feasible for small lattices
+%has become especially
+%useful with the advent of powerful computers which can search for such
+%representations.  
+Recall that  $\EqX$ denotes the lattice of equivalence
 relations on $X$. Sometimes we abuse notation and take $\EqX$ to mean the
 lattice of partitions of the set $X$. This never causes problems because these
 two lattices are isomorphic.  
@@ -1210,10 +1213,10 @@ spanning sublattice\footnote{Recall, by a
   \defn{spanning sublattice}
   of a bounded lattice $L_0$, we mean a sublattice $L\leq L_0$ that has the same top and
   bottom as $L_0$.  That is  $1_L = 1_{L_0}$ and $0_L = 0_{L_0}$.}
-of the lattice $\EqX$ of equivalence relations on a finite set $X$.   
+of the lattice $\bEqX$ of equivalence relations on a finite set $X$.   
 Given this result, we see that even if our goal is to solve the abstract
 representation problem for some (abstract) lattice $L$, then
-we can embed $L$ into $\EqX$ as $L\cong L_0\leq \EqX$, for some finite set
+we can embed $L$ into $\bEqX$ as $L\cong L_0\leq \bEqX$, for some finite set
 $X$, and then try to solve the concrete representation problem for $L_0$.  
 
 A point of clarification is in order here.  The term 
@@ -1221,8 +1224,8 @@ A point of clarification is in order here.  The term
 has become a bit overused in the literature about the finite lattice
 representation problem.  On the one hand, given a finite lattice $L$, if there
 is a finite algebra $\bA$ such that $L \cong \Con \bA$, then $L$ is called a
-\defn{representable lattice}.  On the other hand, given a sublattice $L_0\leq \EqX$, 
-if $L_0\cong L$, then $L_0$ is sometimes called a 
+\defn{representable lattice}.  On the other hand, given a sublattice 
+$L_0\leq \bEqX$, if $L_0\cong L$, then $L_0$ is sometimes called a 
 \defn{concrete representation}
 of the lattice $L$ (whether or not it is the congruence lattice of an algebra).    
 Below we will define the notion of a \defn{closed concrete representation}, and if we
@@ -1230,15 +1233,15 @@ have this special kind of concrete representation of a give lattice, then that
 lattice is indeed representable in the first sense.
 
 As we will see below, there are many examples in which a particular concrete
-representation $L_0\leq \EqX$ of $L$ is not a congruence lattice of a
+representation $L_0\leq \bEqX$ of $L$ is not a congruence lattice of a
 finite algebra.  (In fact, we will describe general situations in which we can
 guarantee that there are no non-trivial\footnote{By a 
   \defn{non-trivial function} we mean a function that is
   not constant and not the identity.} operations which respect the equivalence
 relations of $L_0$.)  This does not imply that $L \notin \sL$.  It may
 simply mean that $L_0$ is not the ``right'' concrete representation of $L$, and
-perhaps we can find some other $L \cong L_1\leq \EqX$ such that $L_1 = \Con
-\<X, \lambda(L_1)\>$.
+perhaps we can find some other $L \cong L_1\leq \bEqX$ such that $L_1 = \Con
+\<X, \lambda(L_1)\>$.\marginpar{$\lambda(L_1)$ is only defined on the next page?}
 
 \subsection{The closure method}
 \label{sec:closure-method}
@@ -1251,7 +1254,7 @@ at the University of Waterloo, by R.~Quackenbush and B.~Wolk at the University
 of Manitoba, and by B.~J\'{o}nsson at Vanderbilt University.''
 
 Let $X^X$ denote the set of all (unary) maps from the set $X$ to itself, and let 
-$\EqX$ denote the lattice of equivalence relations on the set $X$.  If $\theta
+$\bEqX$ denote the lattice of equivalence relations on the set $X$.  If $\theta
 \in \EqX$ and $h\in X^X$, we write $h(\theta) \subseteq \theta$ and say
 that ``$h$ respects $\theta$'' if and only if for all $(x,y)\in X^2$ $(x,y)\in
 \theta$ implies 
@@ -1275,13 +1278,13 @@ That is, $\rho \lambda$ is
 \item \emph{extensive:} $L \subseteq \rho \lambda (L)$ for every $L \leq \EqX$;
 \item \emph{order preserving:} $\rho \lambda (L) \leq \rho \lambda (L_0)$ if $L \leq L_0$.
 \end{itemize}
-Given $L\leq \EqX$, if $\rho\lambda(L) = L$, then we say $L$ is a 
+Given $L\leq \bEqX$, if $\rho\lambda(L) = L$, then we say $L$ is a 
 %\defn{closed sublattice of $\EqX$}, in which case we clearly have
-\emph{closed} sublattice of $\EqX$, in which case we clearly have
+\emph{closed} sublattice of $\bEqX$, in which case we clearly have
 \[L = \Con \<X, \lambda(L)\>.\]
 This suggests the following strategy for solving the representation problem for a
 given abstract finite lattice $L$: search for a concrete representation $L \cong
-L_0\leq \EqX$,
+L_0\leq \bEqX$,
 compute $\lambda(L_0)$, compute $\rho\lambda(L_0)$, and determine whether 
 $\rho\lambda(L_0) = L_0$.  If so, then we have solved the abstract representation
 problem for $L$, by finding a \defn{closed concrete representation}, or simply
@@ -1337,14 +1340,15 @@ $\icx$ and $X^X$.  That is, $\lambda$ and $\rho$ are
 antitone %(order-reversing) 
 maps such that $\lambda \rho \geq \id_{\sH}$ and $\rho
 \lambda \geq \id_{\sF}$.  In particular, for any set $F \in \sF$ we have 
-$F \subseteq \rho \lambda (F)$.  These statements are all trivial verifications, and
-a couple of easy consequences are:
+$F \subseteq \rho \lambda (F)$ and
+%These statements are all trivial verifications, and a couple of easy consequences are:
 \begin{enumerate}
 \item  $\rho\lambda\rho = \rho$ and $\lambda\rho \lambda= \lambda$,
 \item $\rho \lambda$ and $\lambda \rho$ are idempotent.
 \end{enumerate}
 
-Since the map $\rho \lambda$ from $\sF$ to itself is idempotent, extensive, %($F \subseteq \rho \lambda (F)$) 
+Since the map $\rho \lambda$ from $\sF$ to itself is idempotent, extensive, 
+%($F \subseteq \rho \lambda (F)$) 
 and order preserving, it is a 
 \defn{closure operator} 
 on $\sF$, and we say a set $F\in \sF$ is
@@ -1500,11 +1504,8 @@ if it is a monomorphism, in which case $G$ is isomorphic to its image under
 $\varphi$, which is a subgroup of $\Aut\bX$.  We also say, in this case, that
 the group $G$ acts faithfully, and call it a \defn{permutation group}.
 
-
 The \defn{degree} of a group action on a set $X$ is the
 cardinality of $X$.
-Finally, a \defn{primitive group} is a group that
-contains a core-free maximal subgroup.
 
 For our purposes the most important representation of a group $G$ is its action 
 on the set of cosets of a subgroup.  That is, for any subgroup $H\leq G$,
@@ -1513,7 +1514,6 @@ will denote by $\rho_H$.  Specifically, $\rho_H$ is a group homomorphism
 from $G$ into the symmetric group $\Sym(G/H)$ of permutations on the set $G/H =
 \{H, Hx_1, Hx_2, \dots \}$ of \emph{right} cosets of $H$ in $G$.  
 
-When 
 The action is simply right multiplication by elements of $G$. That is,
 $(Hx)^{\rho(g)}= Hxg$.
 % Clearly, $\rho(g_1 g_2) = \rho(g_1)\rho(g_2)$ for all $g_1,
@@ -1540,6 +1540,8 @@ $\core_G(H)=1$,
 then $\rho : G \hookrightarrow \Sym(G/H)$, an embedding, so 
 $\rho$ is a faithful representation; hence $G$ is a permutation group.
 
+Finally, a \defn{primitive group} is a group that
+contains a core-free maximal subgroup.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%% GSETISOMORPHISMS %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2517,10 +2519,10 @@ with a smaller algebra by using a group of larger order.
 Distributive lattices and lattices that are ordinal sums of smaller lattices are omitted. This leaves 35 lattices listed below with the names $\bL_1,\ldots,\bL_{35}$. In most cases, each lattice $\bL_i$ is followed by a
 unary algebra denoted $\bB_i$ with the property that $\bL_i=\Con(\bB_i)$.
 The base set of each algebra is $\{0,1,\dots,n-1\}$, and each unary operation $f,g,h,\ldots$ is
-specified by a vector of values of these elements.  Algebras of size less than
+specified by a vector of values of these elements.  Algebras of cardinality less than
 $11$ \marginpar{PJ: should this be less than or equal to 11???} are known to be minimal-size algebras that produce the corresponding
-congruence lattice. The algebra $\bB_{33}$ is also known to be minimal in
-size. Currently only $\bL_{10}$ is not known to be the congruence
+congruence lattice. The algebra $\bB_{33}$ is also known to be of minimal 
+cardinality. Currently only $\bL_{10}$ is not known to be the congruence
 lattice of a finite algebra. 
 
 %Thirteen of the 35 lattices below are subdirectly reducible (specifically: 6, 7,12, 13, 26, 27, 28, 29, 30, 31, 32, 34, 35). 
@@ -2786,7 +2788,9 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
     f(x)& 0& 0& 0& 0& 0& 0& 2& 1&  2&  1&   3&   4&   5&   3&   4&  5\\
    g(x)& 0& 0& 0& 0& 0& 0& 6&  7&  6&  7& 10& 11& 12& 10& 11& 12 \\
    h(x)&13&14&15&1&9&8&15&14&13& 15& 1&  9&    8&   8& 1&   9\end{array}$
+Method: overalgebras
 \end{tabular}
+\marginpar{need to have some discussion of the overalgebras method in the text?}
 
 \begin{tabular}{ccc}
 $\bL_{10}$&
@@ -2843,8 +2847,9 @@ $\bL_{11}$&
 \end{minipage}
 &
 \begin{tabular}{l}
-Finite algebra with\\
-108 elements known\end{tabular}
+A finite algebra with 108 elements known.\\
+(See discussion after Fig.~\ref{fig:L11})
+\end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -2913,6 +2918,9 @@ h(x)& 0& 1& 2& 3& 4& 5& 6& 0& 1& 2&  4&  5& 6&   0& 1&   2&  3&  4& 6\\
 k(x)& 7& 8& 9& 3&10&11&12&3&3& 3&  3&  3& 3& 11&11&11& 11&11&11\\
 l(x)&13&14&15&16&17& 5&18&13&16&17&17&16&13&5&5&5& 5&  5& 5
  \end{array}$
+ \begin{tabular}{l}
+ Method: \\overalgebras
+ \end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3125,8 +3133,7 @@ $\bL_{20}$&
 \end{minipage}
 &
 \begin{tabular}{l}
-$\bB_{20}=$ SmallGroup(216,153) in GAP\\
-$|\bB_{20}|=216$
+Method: filter-ideal in SmallGroup(216,153) in GAP\\
 \end{tabular}
 \end{tabular}
 
@@ -3350,6 +3357,9 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
    l(x)&0& 6& 7& 8& 9& 10& 6& 7& 8& 9& 10& 0& 6& 8& 9& 10\\
    m(x)&11& 12& 2& 13& 14& 15& 12& 2& 13& 14& 15& 11& 12& 13& 14& 15
 \end{array}$
+ \begin{tabular}{l}
+ Method: \\overalgebras
+ \end{tabular}
 \end{tabular}
 
 \begin{tabular}{ccc}
@@ -3384,6 +3394,10 @@ $\setlength{\arraycolsep}{1pt}\begin{array}{c|cccccccccccccccc}
    l(x)&0& 6& 7& 8& 9& 10& 6& 7& 8& 9& 10& 0& 6& 8& 9& 10\\
    m(x)&11& 12& 2& 13& 14& 15& 12& 2& 13& 14& 15& 11& 12& 13& 14& 15
 \end{array}$
+ \begin{tabular}{l}
+ Method: \\overalgebras
+ \end{tabular}
+
 \end{tabular}
 
 \begin{tabular}{ccc}
